Bug 1520962 - Update stackwalking bounds check to avoid aStackEnd. r=dmajor a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D19210