mozglue/misc/StackWalk.cpp
@@ -853,7 +853,7 @@ void FramePointerStackWalk(MozWalkStackCallback aCallback, uint32_t aSkipFrames,
     // a little if the stack has been corrupted.)
     // We don't need to check against the begining of the stack because
     // we can assume that aBp > sp
-    if (next <= aBp || next > aStackEnd || (uintptr_t(next) & 3)) {
+    if (next <= aBp || next >= aStackEnd || (uintptr_t(next) & 3)) {
       break;
     }
 #  if (defined(__ppc__) && defined(XP_MACOSX)) || defined(__powerpc64__)
